--- a/upcoming.html
+++ b/upcoming.html
@@ -5,7 +5,7 @@
     <title>JSON & Products</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-      <script src="lab4.js" async></script>
+      <script src="main.js" async></script>
 
   </head>
   <body>
